--- a/index.html
+++ b/index.html
@@ -203,53 +203,53 @@
                             <img src="assets/img/portfolio/eng/2.png" alt="">
                         </div>
                         <div class="col-md-6">
-                            <h4 class="text-left caps">Internal Accounting System</h4>
+                            <h4 class="text-left caps">Personalized Content</h4>
                             <p class="text-left">
-                                ENG, LLC needed to introduce an accounting system which would track both revenues and expenses, in various currencies.
+                                Easy cms based platform was created to allow authors managing and publishing content while going through the custom approval workflow .
                             </p>
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <h4 class="text-right caps">Calendaring System</h4>
+                            <h4 class="text-right caps">Find a Financial Professional</h4>
                             <p class="text-right">
-                                ENG, LLC coordinates events between their clients and consultants.  In order to help them visualize and streamline their workflow, I built a calendaring system, based on the <a href="http://tools.ietf.org/html/rfc5545">iCalendar specification.</a>  When ENG creates an event, it will show up in their dashboard view, as well as send out meeting invites to all participants involved using dynamic templates, specialized for each particular client.
+                                Lets you find financial advisors and contact them by fixing an appointment.
                             </p>
                         </div>
-                        <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/3.png" alt="">
-                        </div>
-                    </div>
-                    <div class="row padding-md">
                         <div class="col-md-6">
                             <img src="assets/img/portfolio/eng/4.png" alt="">
                         </div>
+                    </div>
+                    <div class="row padding-md">
                         <div class="col-md-6">
-                            <h4 class="text-left caps">Full Text Search</h4>
+                            <img src="assets/img/portfolio/eng/3.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h4 class="text-left caps">Search</h4>
                             <p class="text-left">
-                                ENG, LLC requires advanced searching capabilities to locate relevant experts from their vast database.  Therefore, I decided that it was necessary to implement Apache Lucene Full Text Search Engine.
+                                IBM watson integrates and powers the cms based angular driven UI through REST .
                             </p>
                         </div>
                     </div>                    
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <h4 class="text-right caps">Compliance Agreements and Questionnaires</h4>
+                            <h4 class="text-right caps">Contact US</h4>
                             <p class="text-right">
-                                ENG, LLC is one of the leaders of compliance in the Expert Networking industry.  They require that experts undergo tutorials, sign agreements detailing the rules of any client discussions, and in some cases, request that experts pass a compliance questionnaire.
+                                A simple content driven contact us form lets users reach out to different business related call center's  .
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/compliance.png" alt="">
+                            <img src="assets/img/portfolio/eng/5.png" alt="">
                         </div>
                     </div> 
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/referral.png" alt="">
+                            <img src="assets/img/portfolio/eng/6.png" alt="">
                         </div>
                         <div class="col-md-6">
-                            <h4 class="text-left caps">Referral System</h4>
+                            <h4 class="text-left caps">File a claim</h4>
                             <p class="text-left">
-                            	Client wanted to incorporate a referral system, whereby consultants could link people from their network to ENG and receive a referral fee.
+                            	System allows you to file and initiate the claim request with simple ease of form.
                             </p>
                         </div>
                     </div>                                                           
