--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="col-md-12">
                             <h2 class="text-center caps">Financial Wellness Homepage</h2>                      
                             <img src="" alt="" style="display: inline; height: 50px; margin-right: 20px;">
-                            <img src="assets/img/portfolio/eng/1.png" alt="" style="display: inline; height: 50px; margin-right: 10px;">
+                            <img src="assets/img/portfolio/orfa/1.png" alt="" style="display: inline; height: 50px; margin-right: 10px;">
                             <img src="" alt="" style="display: inline; height: 80px; margin-right: 15px;">
                             <img src="" alt="" style="display: inline; height: 50px;">
                         </div>
@@ -285,7 +285,7 @@
                     <div class="row">
                         <div class="col-md-12 padding-lg">
                             <h2 class="text-center caps">
-                                It’s not about geeting to Financially stable.
+                                It’s not just about geeting to Financially stable.
                             </h2>
                         </div>
                     </div>
@@ -298,12 +298,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/3.png" alt="">
+                            <img src="assets/img/portfolio/orfa/3.png" alt="">
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/4.png" alt="">
+                            <img src="assets/img/portfolio/orfa/4.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Albums</h4>
@@ -320,12 +320,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/5.png" alt="">
+                            <img src="assets/img/portfolio/orfa/5.png" alt="">
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/6.png" alt="">
+                            <img src="assets/img/portfolio/orfa/6.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Articles/Infographics/Videos</h4>
