--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <hr>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/2.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/2.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Personalized Content</h4>
@@ -217,12 +217,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/4.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/4.png" alt="">
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/3.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/3.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Search</h4>
@@ -239,12 +239,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/5.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/5.png" alt="">
                         </div>
                     </div> 
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/eng/6.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/6.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">File a claim</h4>
@@ -276,7 +276,7 @@
                         <div class="col-md-12">
                             <h2 class="text-center caps">Financial Wellness Homepage</h2>                      
                             <img src="" alt="" style="display: inline; height: 50px; margin-right: 20px;">
-                            <img src="assets/img/portfolio/orfa/1.png" alt="" style="display: inline; height: 50px; margin-right: 10px;">
+                            <img src="assets/img/portfolio/orfa/1.png" alt="">
                             <img src="" alt="" style="display: inline; height: 80px; margin-right: 15px;">
                             <img src="" alt="" style="display: inline; height: 50px;">
                         </div>
@@ -298,12 +298,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/orfa/3.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/orfa/3.png" alt="">
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/orfa/4.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/orfa/4.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Albums</h4>
@@ -320,12 +320,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/orfa/5.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/orfa/5.png" alt="">
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="assets/img/portfolio/orfa/6.png" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/orfa/6.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Articles/Infographics/Videos</h4>
