--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <div class="container">
                     <div class="row padding-md">
                         <div class="col-md-12">
-                            <h2 class="text-center caps">Financial Wellness Homepage</h2>                      
+                            <h2 class="text-center caps">Homepage</h2>                      
                             <img src="" alt="" style="display: inline; height: 50px; margin-right: 20px;">
                             <img src="assets/img/portfolio/orfa/1.png" alt="">
                             <img src="" alt="" style="display: inline; height: 80px; margin-right: 15px;">
