--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <div class="modal-content">
             <div class="modal-header dark header-img-bg">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title text-center title caps" id="project-3Label">Your Love Letter Films</h3>
+                <h3 class="modal-title text-center title caps" id="project-3Label">Surgeon's Network</h3>
                 <!--  <h4 class="sub-title">Lead Developer</h4> -->
             </div>
             <div class="modal-body">
@@ -357,11 +357,11 @@
                         <div class="col-md-6">
                             <h4 class="text-right text-left-sm caps">Website</h4>
                             <p class="text-right text-left-sm">
-                                Using Wordpress, I was able to provide Your Love Letter Films, a wedding photography business, the ability to have a beautiful website.
+                                A CMS and portal based Business Process Driven system which allows surgeon's across the globe to request for an artificially created body parts to cure the patients.
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/yourllf/1.png" alt="">
+                            <img src="assets/img/portfolio/yourllf/1.png" alt="">
                         </div>
                     </div>
                 </div>
