--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <div class="modal-header dark header-img-bg">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h3 class="modal-title text-center title caps" id="project-3Label">Surgeon's Network</h3>
-                <!--  <h4 class="sub-title">Lead Developer</h4> -->
+                 <h4 class="sub-title">Lead Developer</h4> 
             </div>
             <div class="modal-body">
                 <div class="container">
@@ -378,8 +378,8 @@
         <div class="modal-content">
             <div class="modal-header dark header-img-bg">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title text-center title caps" id="project-2Label">Classpacker</h3>
-                <h4 class="sub-title">PHP Developer</h4>
+                <h3 class="modal-title text-center title caps" id="project-2Label">MFL</h3>
+                <h4 class="sub-title">Lead Developer</h4>
             </div>
             <div class="modal-body">
                 <div class="container">
@@ -417,8 +417,8 @@
         <div class="modal-content">
             <div class="modal-header dark header-img-bg" style="">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title text-center title caps" id="project-3Label">Bookping</h3>
-                <h4 class="sub-title">PHP Developer</h4>
+                <h3 class="modal-title text-center title caps" id="project-3Label">PGIM</h3>
+                <h4 class="sub-title">Lead Developer</h4>
             </div>
             <div class="modal-body">
                 <div class="container">
