--- a/index.html
+++ b/index.html
@@ -385,13 +385,13 @@
                 <div class="container">
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <h4 class="text-right text-left-sm caps">Full Stack Development</h4>
+                            <h4 class="text-right text-left-sm caps">Technical Lead</h4>
                             <p class="text-right text-left-sm">
-								Classpacker is a project collaboration tool.  Built using the LAMP stack, I also created our own custom MVC application framework.                            
+								MFL is an engagement platform which engage its users with power of personalization by using parameters such as users age,goals and help customer engage and enroll prospect's.                            
 							</p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/classpacker/1.png" alt="">
+                            <img src="assets/img/portfolio/mfl/10.png" alt="">
                         </div>
                     </div>
                     <hr>
@@ -426,11 +426,11 @@
                         <div class="col-md-6">
                             <h4 class="text-right text-left-sm caps">About</h4>
                             <p class="text-right text-left-sm">
-                                Bookping is a price comparison tool for the numerous online retailers.  Additionally, Bookping was able to retrieve the books required by college courses, so that the user would not have to manually find this information.
+                                PGIM is an investment management website outlying the details of company and its businesses.Its a cms driven portal which engage users based on personalization.
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/bookping/1.png" alt="">
+                            <img src="assets/img/portfolio/pgim/1.png" alt="">
                         </div>
                     </div>
                 </div>
