--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 		                <li>		                
 		                    <div class="col-sm-4">
 		                        <figure class="sliding-image waypoint-3">
-		                            <div class="img" style="background-image: url('assets/img/portfolio/classpacker/1.png')" ></div>
+		                            <div class="img" style="background-image: url('assets/img/portfolio/pgim/1.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Surgeon's Network</h4>
+		                                <h4 class="caps text-center center-block text-white">PGIM</h4>
 		                                <a href="#m_project-04" data-toggle="modal" data-target="#project-04" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
@@ -141,9 +141,9 @@
 		                    </div>
 		                    <div class="col-sm-4">
 		                        <figure class="sliding-image waypoint-3">
-		                            <div class="img" style="background-image: url('https://namhoang.github.io/assets/img/portfolio/bookping/1.png')" ></div>
+		                            <div class="img" style="background-image: url('assets/img/portfolio/mfl/10.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Bookping</h4>
+		                                <h4 class="caps text-center center-block text-white">My Financial Life</h4>
 		                                <a href="#m_project-05" data-toggle="modal" data-target="#project-05" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
@@ -378,7 +378,7 @@
         <div class="modal-content">
             <div class="modal-header dark header-img-bg">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title text-center title caps" id="project-2Label">MFL</h3>
+                <h3 class="modal-title text-center title caps" id="project-2Label">My Financial Life</h3>
                 <h4 class="sub-title">Lead Developer</h4>
             </div>
             <div class="modal-body">
