--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
             <div class="modal-body">
                 <div class="container">
                     <div class="row padding-md">
-                        <div class="col-md-6">
-                            <h4 class="text-right text-left-sm caps">Prudential.com</h4>
-                            <p class="text-right text-left-sm">
+                        <div class="col-md-12">
+                            <h4 class="text-center caps">Prudential.com</h4>
+                            <p class="text-center">
                                 Worked as a Technical architect in the project. Project was to develop a new portal for Prudential customers with an intent to serve the personalized content for the visiting and registered users. Project leveraged IBM WCM capabilities to render the personalized content and also aims to provide the content authors with a seamless experience to enter and manage the content. Portal also aims to provide existing customers of Prudential with an intuitive dashboard which can be used by them to maintain and manage their policies or products.
                             </p>
                         </div>
