--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                 <div class="container">
                     <div class="row padding-md">
                         <div class="col-md-12">
-                            <h4 class="text-center caps">Prudential.com</h4>
+                            <h4 class="text-center caps">Homepage</h4>
                             <p class="text-center">
-                                Home Page.
+                                Prudential.com homepage is a highly customized page which acts as a gateway for its customers by providing them personalized information about products and offerings.
                             </p>
                         </div>
                         <div class="col-md-6">
