--- a/index.html
+++ b/index.html
@@ -743,7 +743,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                &copy; 2018 mohit-kumar-saxena.github.io
+                Copyright &copy; 2018 by Mohit Kumar Saxena 
+All rights reserved.
             </div>
         </div>
     </div>
