--- a/resume.html
+++ b/resume.html
@@ -69,26 +69,45 @@
 	    
 	
 	<main role="main">
-		<section id="section-a" class="light-gray padding-lg">
+	<section id="section-z" class="light-gray padding-lg" style="background-color: black">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="contact-tile">
+                    <div class="table">
+                        <div class="cell-middle skills">
+                            <h4 style="color: wheat">Back to Homepage</h4>
+                            <a href="www.mohitkumarsaxena.com">
+								<i class="fa fa-home"></i>
+							</a>
+                            <h6 class="caps"><a href="www.mohitkumarsaxena.com"></a></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+     </div>
+    </div>
+</section>
+		<section id="section-a" class="light-gray padding-lg" style="background-color: black">
 		    <div class="container">
 		        <div class="row">
 		            <div class="col-md-8 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
-		                <h1><p class="text-mid">Please click below link to download Mohit's Resume</p></h1>
+		                <h1><p class="text-mid" style="color: wheat">Please click below link to download Mohit's Resume</p></h1>
 		               <h2> <p class="text-mid"><a href="/resume.doc">Download Resume</a></p></h2>
 		            </div>
 		        </div>
 		    </div>
 		</section>
 
-<section id="section-e" class="light-gray padding-lg">
+<section id="section-e" class="light-gray padding-lg" style="background-color: black">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                            <h4>Email</h4>
+                            <h4 style="color: wheat">Email</h4>
                             <a href="mailto:mohit.km.saxena@gmail.com">
 								<i class="fa fa-envelope"></i>
 							</a>
@@ -101,7 +120,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                            <h4>Phone</h4>
+                            <h4 style="color: wheat">Phone</h4>
                             <a href="tel:+12012732110">
                             	<i class="fa fa-phone"></i>
                            	</a>
@@ -114,11 +133,11 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                            <h4>LinkedIn</h4>
+                            <h4 style="color: wheat">LinkedIn</h4>
 							<a href="https://www.linkedin.com/in/mohit-saxena-3944b538">
 								<i class="fa fa-linkedin-square"></i>
 							</a>
-                            <h6 class="caps"><a href="https://www.linkedin.com/in/mohit-saxena-3944b538">Mohit Saxena</a></h6>
+                            <h6 class="caps" style="color: wheat"><a href="https://www.linkedin.com/in/mohit-saxena-3944b538">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
@@ -130,8 +149,9 @@
 <footer class="dark-gray text-mid container-fluid padding-md">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                &copy; 2018 mohit-kumar-saxena.github.io
+            <div class="col-md-12" style="color: wheat">
+                Copyright &copy; 2018 by Mohit Kumar Saxena 
+All rights reserved.
             </div>
         </div>
     </div>
