--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                             <h4 style="color: wheat">Back to Homepage</h4>
-                            <a href="www.mohitkumarsaxena.com">
+                            <a href="http://www.mohitkumarsaxena.com">
 								<i class="fa fa-home"></i>
 							</a>
                             <h6 class="caps"><a href="www.mohitkumarsaxena.com"></a></h6>
