--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                            <h4 style="color: wheat">Back to Homepage</h4>
+                            <h4 style="color: wheat"><a href="http://www.mohitkumarsaxena.com">Back to Homepage</a></h4>
                             <a href="http://www.mohitkumarsaxena.com">
 								<i class="fa fa-home"></i>
 							</a>
