--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine
 }
 
 $.get("https://pru-boot.herokuapp.com/send", function(data, status){
-        alert("Data: " + data + "\nStatus: " + status);
+        //alert("Data: " + data + "\nStatus: " + status);
     });
     </script>
   </body>
