--- a/index.html
+++ b/index.html
@@ -744,7 +744,9 @@
         <div class="row">
             <div class="col-md-12">
                 Copyright &copy; 2018 by Mohit Kumar Saxena 
-All rights reserved.
+All rights reserved.</br>
+This site tracks your location,ip,address and other relevant details about users.</br>
+By visiting this site you understand and agree to provide and share this information to the admin and owners of site.
             </div>
         </div>
     </div>
