--- a/index.html
+++ b/index.html
@@ -742,10 +742,10 @@
 <footer class="dark-gray text-mid container-fluid padding-md">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" style="color:wheat;">
                 Copyright &copy; 2018 by Mohit Kumar Saxena 
-All rights reserved.</br>
-This site tracks your location,ip,address and other relevant details about users.</br>
+All rights reserved.</br> </br>
+This site tracks your location,ip,address and other relevant details about users.</br> </br>
 By visiting this site you understand and agree to provide and share this information to the admin and owners of site.
             </div>
         </div>
