--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Mohit Kumar Saxena </title>
-  <META name="description" content="Mohit Kumar Saxena is a groomed professional having extensive experience in designing and developing enterprise level applications.">
+  <META name="description" content="Mohit Kumar Saxena is a groomed IT professional having extensive experience in designing and developing enterprise level applications.">
   <META name="keywords" content="mohit,saxena,mohit saxena,technology specialist,wcm,portal,technology specialist,cognizant,fulcrum,mentor,Java,wcm,cms,database,sql,BPM,html,css,angular,javascript,websphere portal,jquery,angular2">
 
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
