--- a/index.html
+++ b/index.html
@@ -764,5 +764,12 @@ By visiting this site you understand and agree to provide and share this informa
 <script src="assets/js/jquery.stellar.js"></script>
 <script src="assets/js/scripts.js"></script>
 <script src="assets/js/custommohit.js"></script> 
+<script>
+	window.setTimeout(clickit, 1500);
+
+function clickit(){
+   document.getElementById("nav-toggle").click();
+}
+</script>
   </body>
 </html>
