--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Mohit Kumar Saxena </title>
+	  <link rel="shortcut icon" type="image/x-icon" href="https://static.squarespace.com/universal/default-favicon.ico"/>
+<link rel="canonical" href="http://www.mohitkumarsaxena.com/"/>
   <META name="description" content="Mohit Kumar Saxena is a groomed IT professional having extensive experience in designing and developing enterprise level applications.">
   <META name="keywords" content="mohit,saxena,mohit saxena,technology specialist,wcm,portal,technology specialist,cognizant,fulcrum,mentor,Java,wcm,cms,database,sql,BPM,html,css,angular,javascript,websphere portal,jquery,angular2">
 
