--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 <section id="section-e" class="light-gray padding-lg">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
@@ -711,7 +711,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
@@ -724,7 +724,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+		 <div class="col-md-3">
+                <div class="contact-tile">
+                    <div class="table">
+                        <div class="cell-middle skills">
+                            <h4>Phone</h4>
+                            <a href="tel:+12012732110">
+                            	<i class="fa fa-phone"></i>
+                           	</a>
+                            <h6 class="caps"><a href='http://vizualize.me/mohitsaxena?r=mohitsaxena' title='Mohit Saxena's infographic CV on vizualize.me' target='_blank'><img src='http://vizualize.me/media/img/socialicons/vizualizeme.png'/></a></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
