--- a/index.html
+++ b/index.html
@@ -728,9 +728,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                            <h4>Phone</h4>
-                            <a href="tel:+12012732110">
-                            	<i class="fa fa-phone"></i>
+                            <h4>Vizualize Me</h4>
+                            <a href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
+                            	<i class="fa fa-user"></i>
                            	</a>
                             <h6 class="caps"><a href='http://vizualize.me/mohitsaxena?r=mohitsaxena' title='Mohit Saxena's infographic CV on vizualize.me' target='_blank'><img src='http://vizualize.me/media/img/socialicons/vizualizeme.png'/></a></h6>
                         </div>
