--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                             <a href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
                             	<i class="fa fa-user"></i>
                            	</a>
-                            <h6 class="caps"><a href='http://vizualize.me/mohitsaxena?r=mohitsaxena' title='Mohit Saxena's infographic CV on vizualize.me' target='_blank'><img src='http://vizualize.me/media/img/socialicons/vizualizeme.png'/></a></h6>
+                            <h6 class="caps">Infographic CV</h6>
                         </div>
                     </div>
                 </div>
