--- a/index.html
+++ b/index.html
@@ -732,7 +732,9 @@
                             <a href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
                             	<i class="fa fa-user"></i>
                            	</a>
-                            <h6 class="caps">Infographic CV</h6>
+                            <h6 class="caps"> <a href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
+                            	
+                           	Infographic CV</a></h6>
                         </div>
                     </div>
                 </div>
