--- a/index.html
+++ b/index.html
@@ -729,10 +729,10 @@
                     <div class="table">
                         <div class="cell-middle skills">
                             <h4>Vizualize Me</h4>
-                            <a href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
+                            <a target="_blank" rel="noopener noreferrer" href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
                             	<i class="fa fa-user"></i>
                            	</a>
-                            <h6 class="caps"> <a href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
+                            <h6 class="caps"> <a target="_blank" rel="noopener noreferrer" href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
                             	
                            	Infographic CV</a></h6>
                         </div>
