--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
 		<section id="section-a" class="light-gray padding-lg">
 		    <div class="container">
 		        <div class="row">
-		            <div class="col-md-8 col-md-offset-2 text-center waypoint-2">
+		            <div class="col-md-4 col-md-offset-2 text-center waypoint-2">
+		                <div class="anchor"><span class="icon-anchor"></span></div>
+		                <h3>About Me</h3>
+		                <p class="text-mid">I have been leading and developing web applications for over 9 years.  I believe in designing and writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
+		            </div>
+				 <div class="col-md-4 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
 		                <h3>About Me</h3>
 		                <p class="text-mid">I have been leading and developing web applications for over 9 years.  I believe in designing and writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
