--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
 		            </div>
 				 <div class="col-md-4 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
-		                <h3>About Me</h3>
-		                <p class="text-mid">I have been leading and developing web applications for over 9 years.  I believe in designing and writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
+		                <h3>Vizualize Me | INFOGRAPHIC CV </h3>
+		                <p class="text-mid"><a target="_blank" rel="noopener noreferrer" href="http://vizualize.me/mohitsaxena?r=mohitsaxena">
+                            	<i class="fa fa-user"></i>
+                           	</a></p>
 		            </div>
 		        </div>
 		    </div>
