--- a/index.html
+++ b/index.html
@@ -757,10 +757,10 @@
                     <div class="table">
                         <div class="cell-middle skills">
                             <h4>LinkedIn</h4>
-							<a href="https://www.linkedin.com/in/mohit-saxena-3944b538">
+							<a href="https://www.linkedin.com/in/mohit-saxena-3944b538" target="_blank">
 								<i class="fa fa-linkedin-square"></i>
 							</a>
-                            <h6 class="caps"><a href="https://www.linkedin.com/in/mohit-saxena-3944b538">Mohit Saxena</a></h6>
+                            <h6 class="caps"><a href="https://www.linkedin.com/in/mohit-saxena-3944b538" target="_blank">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
